--- a/src/ansible-kubernetes-tofu/devcontainer-template.json
+++ b/src/ansible-kubernetes-tofu/devcontainer-template.json
@@ -1,7 +1,7 @@
 {
     "id": "ansible-kubernetes-tofu",
     "version": "1.0.0",
-    "name": "Python 3",
+    "name": "Ansible + Kubernetes + OpenTofu",
     "description": "Develop applications using Ansible, Kubernetes and OpenTofu",
     "documentationURL": "https://github.com/jhoareaumarion/devcontainers/blob/main/src/ansible-kubernetes-tofu/README.md",
     "publisher": "jhoareaumarion",
