--- a/src/ansible/.devcontainer/devcontainer.json
+++ b/src/ansible/.devcontainer/devcontainer.json
@@ -7,7 +7,8 @@
   "customizations": {
     "vscode": {
       "extensions": [
-        "redhat.ansible"
+        "redhat.ansible",
+        "redhat.vscode-yaml"
       ]
     }
   },
