Reintroduce post-create sh

--- a/src/ansible/.devcontainer/devcontainer.json
+++ b/src/ansible/.devcontainer/devcontainer.json
@@ -4,9 +4,11 @@
     "dockerfile": "Dockerfile",
     "context": ".",    
     "args": {
-      "PYTHON_PACKAGES": "",          // comma-separated
-      "ANSIBLE_COLLECTIONS": ""       // comma-separated
     }
+  },
+  "containerEnv": {
+    "PYTHON_PACKAGES": "",                                              // comma-separated
+    "ANSIBLE_COLLECTIONS": ""                                           // comma-separated
   },
   "customizations": {
     "vscode": {
@@ -16,7 +18,7 @@
       ]
     }
   },
-  "postCreateCommand": "",
+  "postCreateCommand": "/usr/local/bin/post-create.sh | tee /tmp/post-create.log",
   "remoteUser": "root",
   "features": {},
   "forwardPorts": [],
