--- a/src/ansible/.devcontainer/Dockerfile
+++ b/src/ansible/.devcontainer/Dockerfile
@@ -7,9 +7,6 @@ LABEL org.opencontainers.image.licenses="MPL 2.0"
 
 WORKDIR /workspace
 
-ARG PYTHON_PACKAGES
-ARG ANSIBLE_COLLECTIONS
-
     # Install pipx using the Python user environment
 RUN python3 -m pip install --user pipx && \
     python3 -m pipx ensurepath && \
@@ -21,17 +18,7 @@ RUN python3 -m pip install --user pipx && \
     # Install ansible-lint
     pipx install ansible-lint
 
-RUN if [ ! -z "$PYTHON_PACKAGES" ]; then \
-    pipx inject ansible $(echo $PYTHON_PACKAGES | tr ',' ' '); \
-fi && \
-    if [ ! -z "$ANSIBLE_COLLECTIONS" ]; then \
-        echo "Installing Ansible collections..."; \
-        echo "Collections: $ANSIBLE_COLLECTIONS"; \
-        echo "collections:" > /tmp/requirements.yml; \
-        for c in $(echo $ANSIBLE_COLLECTIONS | tr ',' ' '); do \
-            echo "  - name: $c" >> /tmp/requirements.yml; \
-        done; \
-        ansible-galaxy collection install -r /tmp/requirements.yml; \
-    fi
+COPY post-create.sh /usr/local/bin/post-create.sh
+RUN chmod +x /usr/local/bin/post-create.sh
 
 CMD ["/bin/bash"]
