Introduce the devcontainer with all three

--- a/src/ansible-kubernetes-tofu/.devcontainer/devcontainer.json
+++ b/src/ansible-kubernetes-tofu/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
   "name": "Ansible + Kubernetes + OpenTofu",
   "build":{
     "dockerfile": "Dockerfile",
-    "context": "."
+    "context": "../../."
   },
   "containerEnv": {
     "PYTHON_PACKAGES": "",                                              // comma-separated
