--- a/src/tofu/.devcontainer/Dockerfile
+++ b/src/tofu/.devcontainer/Dockerfile
@@ -7,22 +7,11 @@ LABEL org.opencontainers.image.licenses="MPL 2.0"
 
 WORKDIR /workspace
 
+# Copy the installation script
+COPY install_tofu.sh /tmp/install_tofu.sh
 
-    # Update packages and install dependencies for repository management
-RUN apt-get update && \
-    apt-get install -y apt-transport-https ca-certificates curl gnupg wget && \
-    # Create keyring directory
-    install -m 0755 -d /etc/apt/keyrings && \
-    # Download OpenTofu GPG keys
-    wget -qO- https://get.opentofu.org/opentofu.gpg | tee /etc/apt/keyrings/opentofu.gpg >/dev/null && \
-    wget -qO- https://packages.opentofu.org/opentofu/tofu/gpgkey | gpg --no-tty --batch --dearmor -o /etc/apt/keyrings/opentofu-repo.gpg && \
-    # Add OpenTofu APT repository
-    echo "deb [signed-by=/etc/apt/keyrings/opentofu.gpg,/etc/apt/keyrings/opentofu-repo.gpg] https://packages.opentofu.org/opentofu/tofu/any/ any main" | tee /etc/apt/sources.list.d/opentofu.list >/dev/null && \
-    echo "deb-src [signed-by=/etc/apt/keyrings/opentofu.gpg,/etc/apt/keyrings/opentofu-repo.gpg] https://packages.opentofu.org/opentofu/tofu/any/ any main" | tee -a /etc/apt/sources.list.d/opentofu.list >/dev/null && \
-    # Set proper permissions
-    chmod a+r /etc/apt/sources.list.d/opentofu.list
+# Run the script
+RUN /tmp/install_tofu.sh && \
+    rm /tmp/install_tofu.sh
 
-    # Update package lists and install OpenTofu
-RUN apt-get update && \
-    apt-get install -y tofu
 CMD ["/bin/bash"]
