--- a/src/ansible-kubernetes-tofu/.devcontainer/devcontainer.json
+++ b/src/ansible-kubernetes-tofu/.devcontainer/devcontainer.json
@@ -3,10 +3,10 @@
   "build":{
     "dockerfile": "Dockerfile",
     "context": "../../."
-  },
+  },  
   "containerEnv": {
-    "PYTHON_PACKAGES": "",                                              // comma-separated
-    "ANSIBLE_COLLECTIONS": ""                                           // comma-separated
+    "PYTHON_PACKAGES": "${templateOption:additionalPythonPackages}",                                              // comma-separated
+    "ANSIBLE_COLLECTIONS": "${templateOption:additionnalAnsibleCollections}"                                           // comma-separated
   },
   "customizations": {
     "vscode": {
