--- a/src/tofu/.devcontainer/Dockerfile
+++ b/src/tofu/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/devcontainers/python:1-3.12-bullseye 
+FROM mcr.microsoft.com/devcontainers/python:1-${templateOption:imageVariant}
 #${templateOption:imageVariant}
 
 LABEL org.opencontainers.image.source="https://github.com/jhoareaumarion/devcontainers"
