Trying fix on typo post-create

--- a/src/ansible-kubernetes-tofu/.devcontainer/Dockerfile
+++ b/src/ansible-kubernetes-tofu/.devcontainer/Dockerfile
@@ -5,28 +5,28 @@ LABEL org.opencontainers.image.description="Ansible + Kubernetes + OpenTofu for 
 LABEL org.opencontainers.image.licenses="MPL 2.0"
 
 # Copy the installation script
-COPY tofu/.devcontainer/install_tofu.sh /tmp/install_tofu.sh
+COPY tofu/install_tofu.sh /tmp/install_tofu.sh
 
 # Run the script
 RUN /tmp/install_tofu.sh && \
     rm /tmp/install_tofu.sh
 
 # Copy the installation script
-COPY kubectl/.devcontainer/install_kubectl.sh /tmp/install_kubectl.sh
+COPY kubectl/install_kubectl.sh /tmp/install_kubectl.sh
 
 # Run the script
 RUN /tmp/install_kubectl.sh && \
     rm /tmp/install_kubectl.sh
 
 # Copy the installation script
-COPY ansible/.devcontainer/install_ansible.sh /tmp/install_ansible.sh
+COPY ansible/install_ansible.sh /tmp/install_ansible.sh
 
 # Run the script
 RUN /tmp/install_ansible.sh && \
     rm /tmp/install_ansible.sh
 
-COPY ansible/.devcontainer/post-create.sh /usr/local/bin/post-create.sh
-RUN chmod +x /usr/local/bin/post-create.sh
+COPY ansible/post_create.sh /usr/local/bin/post_create.sh
+RUN chmod +x /usr/local/bin/post_create.sh
 WORKDIR /workspace
 
 CMD ["/bin/bash"]
