--- a/src/ansible/.devcontainer/Dockerfile
+++ b/src/ansible/.devcontainer/Dockerfile
@@ -14,7 +14,7 @@ COPY install_ansible.sh /tmp/install_ansible.sh
 RUN /tmp/install_ansible.sh && \
     rm /tmp/install_ansible.sh
 
-COPY post-create.sh /usr/local/bin/post-create.sh
-RUN chmod +x /usr/local/bin/post-create.sh
+COPY post_create.sh /usr/local/bin/post_create.sh
+RUN chmod +x /usr/local/bin/post_create.sh
 
 CMD ["/bin/bash"]
