--- a/src/ansible-kubernetes-tofu/.devcontainer/devcontainer.json
+++ b/src/ansible-kubernetes-tofu/.devcontainer/devcontainer.json
@@ -23,5 +23,5 @@
   "features": {},
   "forwardPorts": [],
   "mounts": [],
-  "workspaceFolder": "/workspace"
+  "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}"
 }
