--- a/src/ansible-kubernetes-tofu/.devcontainer/devcontainer.json
+++ b/src/ansible-kubernetes-tofu/.devcontainer/devcontainer.json
@@ -6,7 +6,8 @@
   },  
   "containerEnv": {
     "PYTHON_PACKAGES": "${templateOption:additionalPythonPackages}",                                              // comma-separated
-    "ANSIBLE_COLLECTIONS": "${templateOption:additionnalAnsibleCollections}"                                           // comma-separated
+    "ANSIBLE_COLLECTIONS": "${templateOption:additionnalAnsibleCollections}",   
+    "SNAP_PACKAGES": "${templateOption:additionalPythonPackages}"                                            // comma-separated
   },
   "customizations": {
     "vscode": {
