Removed snap and introduce directly bitwarden cli instead

--- a/src/ansible-bitwarden-kubernetes-tofu/.devcontainer/devcontainer.json
+++ b/src/ansible-bitwarden-kubernetes-tofu/.devcontainer/devcontainer.json
@@ -6,8 +6,7 @@
   },  
   "containerEnv": {
     "PYTHON_PACKAGES": "${templateOption:additionalPythonPackages}",                                              // comma-separated
-    "ANSIBLE_COLLECTIONS": "${templateOption:additionnalAnsibleCollections}",   
-    "SNAP_PACKAGES": "${templateOption:additionalSnapPackages}"                                            // comma-separated
+    "ANSIBLE_COLLECTIONS": "${templateOption:additionnalAnsibleCollections}",                             // comma-separated
   },
   "customizations": {
     "vscode": {
